--- a/web/static/i18n/pt.json
+++ b/web/static/i18n/pt.json
@@ -159,7 +159,7 @@
   "admin.ldap.bindUserDesc": "O nome de usuário usado para realizar a pesquisa LDAP. Isso deve ser tipicamente uma conta criada especificamente para uso do Mattermost. Deve ter acesso limitado a ler a parte da árvore LDAP especificado no campo BaseDN.",
   "admin.ldap.bindUserTitle": "Bind Username:",
   "admin.ldap.emailAttrDesc": "O atributo no servidor LDAP que será usado para preencher os endereços de e-mail de usuários no Mattermost.",
-  "admin.ldap.emailAttrEx": "Ex \"mail\"",
+  "admin.ldap.emailAttrEx": "Ex \"userPrincipalName\"",
   "admin.ldap.emailAttrTitle": "Atributo de E-mail:",
   "admin.ldap.enableDesc": "Quando verdadeiro, Mattermost permite login utilizando LDAP",
   "admin.ldap.enableTitle": "Ativar Login With LDAP:",
