Update Japanese strings, fix typo and improve consistency

--- a/webapp/i18n/ja.json
+++ b/webapp/i18n/ja.json
@@ -613,7 +613,7 @@
   "audit_table.successfullWebhookCreate": "ウェブフックを作成した",
   "audit_table.successfullWebhookDelete": "ウェブフックを削除した",
   "audit_table.timestamp": "タイムスタンプ",
-  "audit_table.updateGeneral": "アカウントの全般的な設定を更新した",
+  "audit_table.updateGeneral": "アカウントの全般の設定を更新しました",
   "audit_table.updateGlobalNotifications": "システム全体に関する通知の設定を更新した",
   "audit_table.updatePicture": "プロフィール画像を更新した",
   "audit_table.updatedRol": "ユーザーの役割を変更した。変更後: ",
@@ -683,8 +683,8 @@
   "channel_memebers_modal.members": " メンバー",
   "channel_modal.cancel": "キャンセル",
   "channel_modal.channel": "チャンネル",
-  "channel_modal.createNew": "新規作成する ",
-  "channel_modal.descriptionHelp": "この{term}がどのように使われるべきか解説します。",
+  "channel_modal.createNew": "新規作成: ",
+  "channel_modal.descriptionHelp": "この{term}がどのように使われるべきか説明してください。",
   "channel_modal.displayNameError": "この項目は必須です",
   "channel_modal.edit": "編集する",
   "channel_modal.group": "グループ",
@@ -695,7 +695,7 @@
   "channel_modal.privateGroup1": "ユーザーを制限した非公開グループを作成します。 ",
   "channel_modal.privateGroup2": "非公開グループを作成する",
   "channel_modal.publicChannel1": "公開チャンネルを作成する",
-  "channel_modal.publicChannel2": "新しい誰でも参加できる公開チャンネルを作成する。 ",
+  "channel_modal.publicChannel2": "新しい誰でも参加できる公開チャンネルを作成します。 ",
   "channel_modal.purpose": "目的",
   "channel_notifications.allActivity": "全てのアクティビティーについて",
   "channel_notifications.allUnread": "全ての未読のメッセージについて",
@@ -828,7 +828,7 @@
   "find_team.submitError": "有効な電子メールアドレスを入力してください",
   "general_tab.chooseName": "あなたのチームの新しい名称を選択してください",
   "general_tab.codeDesc": "招待コードを再生成するには「編集」をクリックしてください。",
-  "general_tab.codeLongDesc": "招待コードは、**チーム招待リンクを入手する**で作成されたチーム招待リンクのURLの一部として使われます。再生成することで新しいチーム招待リンクが作成され、古いリンクは▽むk無効化されます。",
+  "general_tab.codeLongDesc": "招待コードは、**チーム招待リンクを入手する**で作成されたチーム招待リンクのURLの一部として使われます。再生成することで新しいチーム招待リンクが作成され、古いリンクは無効化されます。",
   "general_tab.codeTitle": "招待コード",
   "general_tab.dirContact": "システムのホームページでのチーム一覧を有効にするようにシステム管理者に連絡してください。",
   "general_tab.dirDisabled": "チーム一覧が無効になっています。システム管理者にシステムコンソールのチームの設定でチーム一覧を有効化するように依頼してください。",
@@ -842,14 +842,14 @@
   "general_tab.required": "この項目は必須です",
   "general_tab.teamName": "チーム名",
   "general_tab.teamNameInfo": "サインイン画面とサイドバーの左上に表示されるチームの名称を設定します。",
-  "general_tab.title": "全般的な設定",
+  "general_tab.title": "全般の設定",
   "general_tab.yes": "はい",
   "get_link.clipboard": " クリップボードにリンクをコピーします。",
   "get_link.close": "閉じる",
   "get_link.copy": "リンクをコピーする",
   "get_post_link_modal.help": "以下のリンクから、ログインしているユーザーは、あなたの投稿を確認できます。",
   "get_post_link_modal.title": "パーマリンクをコピーする",
-  "get_team_invite_link_modal.help": "チームメイトに以下のリンクを送ることで、このチームサイトへの利用登録をしてもらえるようにします。チーム招待リンクは、チーム管理者が再生成しない限り複数のチームメイトで共有して使うことができます。",
+  "get_team_invite_link_modal.help": "チームメイトに以下のリンクを送ることで、このチームサイトへの利用登録をしてもらえます。チーム招待リンクは、チーム管理者が再生成しない限り、複数のチームメイトで共有して使うことができます。",
   "get_team_invite_link_modal.helpDisabled": "あなたのチームではユーザー作成は無効になっています。チーム管理者に詳細を問い合わせてください。",
   "get_team_invite_link_modal.title": "チーム招待リンク",
   "installed_commands.add": "スラッシュコマンドを追加する",
@@ -875,12 +875,12 @@
   "intro_messages.beginning": "{name}のはじまり",
   "intro_messages.channel": "チャンネル",
   "intro_messages.creator": "これは<strong>{name}</strong> {type}のはじまりです。<strong>{creator}</strong> によって<strong>{date}</strong>に作成されました",
-  "intro_messages.default": "<h4 class='channel-intro__title'>{display_name}のはじまり</h4><p class='channel-intro__content'><strong>{display_name}へようこそ!</strong><br/><br/>これはチームメイトが利用登録することで参加する最初のチャンネルです。みんなが知るべき新しいことを投稿するのに使ってください。</p>",
+  "intro_messages.default": "<h4 class='channel-intro__title'>{display_name}のはじまり</h4><p class='channel-intro__content'><strong>{display_name}へようこそ!</strong><br/><br/>これはチームメイトが利用登録後に参加する最初のチャンネルです。みんなが知るべき新しいことを投稿するのに使ってください。</p>",
   "intro_messages.group": "非公開グループ",
   "intro_messages.invite": "他の人をこの{type}に招待する",
   "intro_messages.inviteOthers": "他の人をこのチームに招待する",
   "intro_messages.noCreator": "これは{name} {type}のはじまりです。{date}に作成されました。",
-  "intro_messages.offTopic": "<h4 class=\"channel-intro__title\">{display_name}にはじまり</h4><p class=\"channel-intro__content\">これは{display_name}の最初のチャンネルです。仕事に関係のない会話に使ってください。<br/></p>",
+  "intro_messages.offTopic": "<h4 class=\"channel-intro__title\">{display_name}のはじまり</h4><p class=\"channel-intro__content\">これは{display_name}のはじまりです。仕事に関係のない会話に使ってください。<br/></p>",
   "intro_messages.onlyInvited": " 招待されたメンバーだけがこの非公開グループを見ることができます。",
   "intro_messages.setHeader": "ヘッダーを設定する",
   "intro_messages.teammate": "あなたのダイレクトメッセージの履歴の最初です。ダイレクトメッセージとそこで共有されているファイルは、この領域の外のユーザーからは見ることができません。",
@@ -951,7 +951,7 @@
   "members_popover.title": "メンバー",
   "more_channels.close": "閉じる",
   "more_channels.create": "新しいチャンネルを作成する",
-  "more_channels.createClick": "新しいチャンネルを作成するには「新しいチャンネル」を作成するをクリックしてください",
+  "more_channels.createClick": "新しいチャンネルを作成するには「新しいチャンネルを作成する」をクリックしてください",
   "more_channels.join": "参加する",
   "more_channels.noMore": "参加できるチャンネルがありません",
   "more_channels.title": "他のチャンネル",
@@ -1268,7 +1268,7 @@
   "user.settings.advance.sendDesc": "有効な場合「Enter」で改行し「Ctrl + Enter」でメッセージを投稿します。",
   "user.settings.advance.sendTitle": "Ctrl + Enterでメッセージを投稿する",
   "user.settings.advance.slashCmd_autocmp": "スラッシュコマンドの自動補完をするために外部のアプリケーションを有効にする",
-  "user.settings.advance.title": "高度な設定",
+  "user.settings.advance.title": "詳細の設定",
   "user.settings.custom_theme.awayIndicator": "離席表示",
   "user.settings.custom_theme.buttonBg": "ボタンBG",
   "user.settings.custom_theme.buttonColor": "ボタンテキスト",
@@ -1304,11 +1304,11 @@
   "user.settings.display.normalClock": "時計の12時間表示(例: 4:00 PM)",
   "user.settings.display.preferTime": "時刻の表示形式を選択します。",
   "user.settings.display.showFullname": "名前を表示する",
-  "user.settings.display.showNickname": "ニックネームが存在すればそれを表示します。存在していなけれな氏名が表示されます。",
+  "user.settings.display.showNickname": "ニックネームが存在すればそれを表示する。存在していなけれな氏名を表示する",
   "user.settings.display.showUsername": "ユーザー名を表示する(デフォルト)",
   "user.settings.display.teammateDisplay": "チームメイトの名前の表示",
   "user.settings.display.theme.customTheme": "カスタムテーマ",
-  "user.settings.display.theme.describe": "テーマを管理するために開く",
+  "user.settings.display.theme.describe": "テーマを管理する",
   "user.settings.display.theme.import": "Slackからテーマカラーをインポートする",
   "user.settings.display.theme.otherThemes": "他のテーマを見る",
   "user.settings.display.theme.themeColors": "テーマ色",
@@ -1342,7 +1342,7 @@
   "user.settings.general.notificationsLink": "通知",
   "user.settings.general.primaryEmail": "優先電子メールアドレス",
   "user.settings.general.profilePicture": "プロフィール画像",
-  "user.settings.general.title": "全般的な設定",
+  "user.settings.general.title": "全般の設定",
   "user.settings.general.uploadImage": "画像をアップロードするには「編集する」をクリックしてください",
   "user.settings.general.username": "ユーザー名",
   "user.settings.general.usernameInfo": "チームメイトが簡単に認識し覚えておけるものを選択してください。",
@@ -1374,12 +1374,12 @@
   "user.settings.modal.security": "セキュリティー",
   "user.settings.modal.title": "アカウントの設定",
   "user.settings.notification.allActivity": "全てのアクティビティーについて",
-  "user.settings.notification.soundConfig": "あなたのブラウザーの設定画面で、通知恩について設定してください",
+  "user.settings.notification.soundConfig": "ブラウザーの設定画面で、通知音について設定してください",
   "user.settings.notifications.channelWide": "チャンネル全体についての「@channel」",
   "user.settings.notifications.close": "閉じる",
   "user.settings.notifications.desktop": "デスクトップ通知を送る",
   "user.settings.notifications.desktopSounds": "デスクトップ通知音",
-  "user.settings.notifications.emailInfo": "あなたについての投稿とダイレクトメッセージに関して、電子メール通知を送ります。60秒以上オフラインであるか{siteName}から5分間以上離れている場合です。",
+  "user.settings.notifications.emailInfo": "あなたについての投稿とダイレクトメッセージに関して、電子メール通知を送ります。60秒以上オフラインであるか{siteName}から5分間以上離れている場合に送ります。",
   "user.settings.notifications.emailNotifications": "電子メール通知",
   "user.settings.notifications.header": "通知",
   "user.settings.notifications.info": "デスクトップ通知は、Firefox、Safari、Chrome、Internet Explorer、Edgeで利用可能です。",
