--- a/webapp/i18n/ja.json
+++ b/webapp/i18n/ja.json
@@ -874,13 +874,13 @@
   "intro_messages.anyMember": " このチャンネルには誰でも参加して投稿を閲覧することができます。",
   "intro_messages.beginning": "{name}のはじまり",
   "intro_messages.channel": "チャンネル",
-  "intro_messages.creator": "これは<strong>{name}</strong> {type}のはじまりです。<strong>{creator}</strong> によって<strong>{date}</strong>に作成されました",
-  "intro_messages.default": "<h4 class='channel-intro__title'>{display_name}のはじまり</h4><p class='channel-intro__content'><strong>{display_name}へようこそ!</strong><br/><br/>これはチームメイトが利用登録後に参加する最初のチャンネルです。みんなが知るべき新しいことを投稿するのに使ってください。</p>",
+  "intro_messages.creator": "ここは<strong>{name}</strong> {type}のはじまりです。<strong>{creator}</strong> によって<strong>{date}</strong>に作成されました",
+  "intro_messages.default": "<h4 class='channel-intro__title'>{display_name}のはじまり</h4><p class='channel-intro__content'><strong>{display_name}へようこそ!</strong><br/><br/>ここはチームメイトが利用登録後に参加する最初のチャンネルです。みんなが知るべき新しいことを投稿するのに使ってください。</p>",
   "intro_messages.group": "非公開グループ",
   "intro_messages.invite": "他の人をこの{type}に招待する",
   "intro_messages.inviteOthers": "他の人をこのチームに招待する",
-  "intro_messages.noCreator": "これは{name} {type}のはじまりです。{date}に作成されました。",
-  "intro_messages.offTopic": "<h4 class=\"channel-intro__title\">{display_name}のはじまり</h4><p class=\"channel-intro__content\">これは{display_name}のはじまりです。仕事に関係のない会話に使ってください。<br/></p>",
+  "intro_messages.noCreator": "ここは{name} {type}のはじまりです。{date}に作成されました。",
+  "intro_messages.offTopic": "<h4 class=\"channel-intro__title\">{display_name}のはじまり</h4><p class=\"channel-intro__content\">ここは{display_name}のはじまりです。仕事に関係のない会話に使ってください。<br/></p>",
   "intro_messages.onlyInvited": " 招待されたメンバーだけがこの非公開グループを見ることができます。",
   "intro_messages.setHeader": "ヘッダーを設定する",
   "intro_messages.teammate": "あなたのダイレクトメッセージの履歴の最初です。ダイレクトメッセージとそこで共有されているファイルは、この領域の外のユーザーからは見ることができません。",
